# CarKeys-project

./: .gitignore  Dockerfile  MakeFIle  README.md  check-ssl-status.sh  debug-ssl.sh  deploy.sh  docker-compose.prod.yml  entrypoint.sh  init-letsencrypt.sh  manage.py  nginx.Dockerfile  pyproject.toml  pytest.ini  requirements.txt  todolist.txt
app_ecommerce/: admin.py  apps.py  forms.py  mixins.py  models.py  models_mixins.py  services.py  urls.py  validators.py  views.py
app_ecommerce/migrations/: 0001_initial.py
app_ecommerce/tests/: data.py  mixins.py  mocks.py  test_models.py  test_services.py  test_validators.py  test_views.py
app_landing/: urls.py  views.py
carkeys_project/: asgi.py  common_functions.py  settings.py  urls.py  wsgi.py
design/configs/: gunicorn.conf
design/schema/: carkeys_db_model.mwb
nginx/: nginx.conf
static_files/: robots.txt
static_files/css/: custom.scss  hori-timeline.scss  success_animation.scss  theme.min.css  theme.scss
static_files/css/admin/: admin.min.css  admin.scss
static_files/css/theme/: _base.scss  _landing.scss
static_files/favicon/: about.txt  site.webmanifest
static_files/js/: goods.js  landing.js  main.js  metrika.js
static_files/robots/: robots.txt  sitemap.xml
templates/: 404.html  base.html
templates/app_ecomerce/: goods.html
templates/app_ecomerce/blocks/: cards-list.html  (+6 more)
templates/app_landing/: landing.html
templates/blocks/: callback-banner.html  footer.html  header.html  hero-section-content.html  hero-section.html  page-title.html
templates/elements/: messages.html  offcanvas.html
(+40 files in other folders)
